target/generated-sources/antlr4/mchecking/translator/qt/PQueryParser.java
// Generated from PQuery.g4 by ANTLR 4.5
package mchecking.translator.qt;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, WITH_PROBABILITY=3, WHAT_PROBABILITY=4, EVENTUALLY=5, 
		ALWAYS=6, NEXT=7, NEVER=8, INFINITELY_OFTEN=9, STEADY_STATE=10, UNTIL=11, 
		WEAK_UNTIL=12, RELEASE=13, FOLLOWS=14, PRECEDES=15, FALSE=16, TRUE=17, 
		NOT=18, IMPLIES=19, OR=20, AND=21, RELATION=22, IDENTIFIER=23, NUMBER=24, 
		MUL=25, DIV=26, MOD=27, ADD=28, SUB=29, MULTILINECOMMENT=30, LINECOMMENT=31, 
		WS=32;
	public static final int
		RULE_pQuery = 0, RULE_inequalityQuery = 1, RULE_questionMark = 2, RULE_query = 3, 
		RULE_unaryPattern = 4, RULE_binaryPattern = 5, RULE_notPattern = 6, RULE_eventually = 7, 
		RULE_always = 8, RULE_next = 9, RULE_never = 10, RULE_infinitelyOften = 11, 
		RULE_steadyState = 12, RULE_until = 13, RULE_weakUntil = 14, RULE_release = 15, 
		RULE_follows = 16, RULE_precedes = 17, RULE_expr = 18, RULE_boolExpr = 19, 
		RULE_logicalConstant = 20, RULE_logicalEntity = 21, RULE_probability = 22, 
		RULE_numericExp = 23, RULE_numeric = 24;
	public static final String[] ruleNames = {
		"pQuery", "inequalityQuery", "questionMark", "query", "unaryPattern", 
		"binaryPattern", "notPattern", "eventually", "always", "next", "never", 
		"infinitelyOften", "steadyState", "until", "weakUntil", "release", "follows", 
		"precedes", "expr", "boolExpr", "logicalConstant", "logicalEntity", "probability", 
		"numericExp", "numeric"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'*'", "'/'", "'%'", "'+'", "'-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "WITH_PROBABILITY", "WHAT_PROBABILITY", "EVENTUALLY", 
		"ALWAYS", "NEXT", "NEVER", "INFINITELY_OFTEN", "STEADY_STATE", "UNTIL", 
		"WEAK_UNTIL", "RELEASE", "FOLLOWS", "PRECEDES", "FALSE", "TRUE", "NOT", 
		"IMPLIES", "OR", "AND", "RELATION", "IDENTIFIER", "NUMBER", "MUL", "DIV", 
		"MOD", "ADD", "SUB", "MULTILINECOMMENT", "LINECOMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PQueryContext extends ParserRuleContext {
		public List<InequalityQueryContext> inequalityQuery() {
			return getRuleContexts(InequalityQueryContext.class);
		}
		public InequalityQueryContext inequalityQuery(int i) {
			return getRuleContext(InequalityQueryContext.class,i);
		}
		public List<QuestionMarkContext> questionMark() {
			return getRuleContexts(QuestionMarkContext.class);
		}
		public QuestionMarkContext questionMark(int i) {
			return getRuleContext(QuestionMarkContext.class,i);
		}
		public PQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pQuery; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitPQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PQueryContext pQuery() throws RecognitionException {
		PQueryContext _localctx = new PQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << WITH_PROBABILITY) | (1L << WHAT_PROBABILITY) | (1L << EVENTUALLY) | (1L << ALWAYS) | (1L << NEXT) | (1L << NEVER) | (1L << INFINITELY_OFTEN) | (1L << STEADY_STATE) | (1L << FALSE) | (1L << TRUE) | (1L << NOT) | (1L << IDENTIFIER) | (1L << NUMBER))) != 0)) {
				{
				setState(52);
				switch (_input.LA(1)) {
				case T__0:
				case WITH_PROBABILITY:
				case EVENTUALLY:
				case ALWAYS:
				case NEXT:
				case NEVER:
				case INFINITELY_OFTEN:
				case STEADY_STATE:
				case FALSE:
				case TRUE:
				case NOT:
				case IDENTIFIER:
				case NUMBER:
					{
					setState(50);
					inequalityQuery();
					}
					break;
				case WHAT_PROBABILITY:
					{
					setState(51);
					questionMark();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InequalityQueryContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode WITH_PROBABILITY() { return getToken(PQueryParser.WITH_PROBABILITY, 0); }
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public InequalityQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inequalityQuery; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitInequalityQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InequalityQueryContext inequalityQuery() throws RecognitionException {
		InequalityQueryContext _localctx = new InequalityQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inequalityQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if (_la==WITH_PROBABILITY) {
				{
				setState(57);
				match(WITH_PROBABILITY);
				setState(58);
				probability();
				}
			}

			setState(61);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionMarkContext extends ParserRuleContext {
		public TerminalNode WHAT_PROBABILITY() { return getToken(PQueryParser.WHAT_PROBABILITY, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public QuestionMarkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionMark; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitQuestionMark(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionMarkContext questionMark() throws RecognitionException {
		QuestionMarkContext _localctx = new QuestionMarkContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionMark);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(WHAT_PROBABILITY);
			setState(64);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public UnaryPatternContext unaryPattern() {
			return getRuleContext(UnaryPatternContext.class,0);
		}
		public BinaryPatternContext binaryPattern() {
			return getRuleContext(BinaryPatternContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_query);
		try {
			setState(68);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				unaryPattern();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				binaryPattern();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryPatternContext extends ParserRuleContext {
		public NotPatternContext notPattern() {
			return getRuleContext(NotPatternContext.class,0);
		}
		public EventuallyContext eventually() {
			return getRuleContext(EventuallyContext.class,0);
		}
		public AlwaysContext always() {
			return getRuleContext(AlwaysContext.class,0);
		}
		public NextContext next() {
			return getRuleContext(NextContext.class,0);
		}
		public NeverContext never() {
			return getRuleContext(NeverContext.class,0);
		}
		public InfinitelyOftenContext infinitelyOften() {
			return getRuleContext(InfinitelyOftenContext.class,0);
		}
		public SteadyStateContext steadyState() {
			return getRuleContext(SteadyStateContext.class,0);
		}
		public UnaryPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryPattern; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitUnaryPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryPatternContext unaryPattern() throws RecognitionException {
		UnaryPatternContext _localctx = new UnaryPatternContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unaryPattern);
		try {
			setState(77);
			switch (_input.LA(1)) {
			case NOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				notPattern();
				}
				break;
			case EVENTUALLY:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				eventually();
				}
				break;
			case ALWAYS:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				always();
				}
				break;
			case NEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				next();
				}
				break;
			case NEVER:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				never();
				}
				break;
			case INFINITELY_OFTEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				infinitelyOften();
				}
				break;
			case STEADY_STATE:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				steadyState();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryPatternContext extends ParserRuleContext {
		public UntilContext until() {
			return getRuleContext(UntilContext.class,0);
		}
		public WeakUntilContext weakUntil() {
			return getRuleContext(WeakUntilContext.class,0);
		}
		public ReleaseContext release() {
			return getRuleContext(ReleaseContext.class,0);
		}
		public FollowsContext follows() {
			return getRuleContext(FollowsContext.class,0);
		}
		public PrecedesContext precedes() {
			return getRuleContext(PrecedesContext.class,0);
		}
		public BinaryPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryPattern; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitBinaryPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryPatternContext binaryPattern() throws RecognitionException {
		BinaryPatternContext _localctx = new BinaryPatternContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_binaryPattern);
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				until();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				weakUntil();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				release();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				follows();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				precedes();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotPatternContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(PQueryParser.NOT, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public NotPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notPattern; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitNotPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotPatternContext notPattern() throws RecognitionException {
		NotPatternContext _localctx = new NotPatternContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_notPattern);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(NOT);
				setState(87);
				query();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(NOT);
				setState(89);
				match(T__0);
				setState(90);
				query();
				setState(91);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventuallyContext extends ParserRuleContext {
		public TerminalNode EVENTUALLY() { return getToken(PQueryParser.EVENTUALLY, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EventuallyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventually; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitEventually(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventuallyContext eventually() throws RecognitionException {
		EventuallyContext _localctx = new EventuallyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eventually);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(EVENTUALLY);
			setState(96);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlwaysContext extends ParserRuleContext {
		public TerminalNode ALWAYS() { return getToken(PQueryParser.ALWAYS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AlwaysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_always; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitAlways(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlwaysContext always() throws RecognitionException {
		AlwaysContext _localctx = new AlwaysContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_always);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(ALWAYS);
			setState(99);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NextContext extends ParserRuleContext {
		public TerminalNode NEXT() { return getToken(PQueryParser.NEXT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_next; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitNext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NextContext next() throws RecognitionException {
		NextContext _localctx = new NextContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_next);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(NEXT);
			setState(102);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeverContext extends ParserRuleContext {
		public TerminalNode NEVER() { return getToken(PQueryParser.NEVER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NeverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_never; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitNever(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NeverContext never() throws RecognitionException {
		NeverContext _localctx = new NeverContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_never);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(NEVER);
			setState(105);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfinitelyOftenContext extends ParserRuleContext {
		public TerminalNode INFINITELY_OFTEN() { return getToken(PQueryParser.INFINITELY_OFTEN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InfinitelyOftenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infinitelyOften; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitInfinitelyOften(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfinitelyOftenContext infinitelyOften() throws RecognitionException {
		InfinitelyOftenContext _localctx = new InfinitelyOftenContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_infinitelyOften);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(INFINITELY_OFTEN);
			setState(108);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SteadyStateContext extends ParserRuleContext {
		public TerminalNode STEADY_STATE() { return getToken(PQueryParser.STEADY_STATE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SteadyStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_steadyState; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitSteadyState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SteadyStateContext steadyState() throws RecognitionException {
		SteadyStateContext _localctx = new SteadyStateContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_steadyState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(STEADY_STATE);
			setState(111);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UntilContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode UNTIL() { return getToken(PQueryParser.UNTIL, 0); }
		public UntilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_until; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitUntil(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UntilContext until() throws RecognitionException {
		UntilContext _localctx = new UntilContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_until);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			expr(0);
			setState(114);
			match(UNTIL);
			setState(115);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeakUntilContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode WEAK_UNTIL() { return getToken(PQueryParser.WEAK_UNTIL, 0); }
		public WeakUntilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weakUntil; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitWeakUntil(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WeakUntilContext weakUntil() throws RecognitionException {
		WeakUntilContext _localctx = new WeakUntilContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_weakUntil);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			expr(0);
			setState(118);
			match(WEAK_UNTIL);
			setState(119);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReleaseContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RELEASE() { return getToken(PQueryParser.RELEASE, 0); }
		public ReleaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_release; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitRelease(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReleaseContext release() throws RecognitionException {
		ReleaseContext _localctx = new ReleaseContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_release);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			expr(0);
			setState(122);
			match(RELEASE);
			setState(123);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FollowsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode FOLLOWS() { return getToken(PQueryParser.FOLLOWS, 0); }
		public FollowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_follows; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PQueryVisitor ) return ((PQueryVisitor<? extends T>)visitor).visitFollows(this);
			else return visitor.visitChildren(this);
		}
	}
